# not-yet-done

./: .gitignore  ARCHITECTURE.md  Cargo.toml  test.sh
not-yet-done-cli/: Cargo.toml
not-yet-done-cli/src/: datetime.rs  main.rs  offset.rs
not-yet-done-cli/src/commands/: backup.rs  db.rs  mod.rs  project.rs  tag.rs  task.rs  track.rs
not-yet-done-cli/tests/: track_move.rs  track_start.rs  track_stop.rs  track_summary.rs
not-yet-done-cli/tests/common/: mod.rs
not-yet-done-core/: Cargo.toml
not-yet-done-core/src/: db.rs  error.rs  lib.rs  local_context.rs  module.rs
not-yet-done-core/src/config/: config.rs  config_service.rs  error.rs  mod.rs
not-yet-done-core/src/entity/: global_tag.rs  granularity.rs  mod.rs  project.rs  project_tag.rs  task.rs  task_global_tag.rs  task_project.rs  task_project_tag.rs  tracking.rs
not-yet-done-core/src/filter/: builder.rs  expr.rs  mod.rs
not-yet-done-core/src/repository/: mod.rs  project_repository.rs  tag_repository.rs  task_repository.rs  tracking_repository.rs
not-yet-done-core/src/service/: backup_service.rs  mod.rs  project_service.rs  tag_service.rs  task_service.rs  tracking_service.rs
not-yet-done-core/tests/: filter_integration.rs
not-yet-done-core/tests/fixtures/: filter_col_vs_col.yaml  filter_compound.yaml  filter_is_null.yaml  filter_like.yaml  filter_not.yaml  filter_priority_range.yaml  filter_status_in.yaml  tasks.yaml
not-yet-done-forest/: Cargo.toml
not-yet-done-forest/src/: lib.rs
not-yet-done-macros/: Cargo.toml
not-yet-done-macros/src/: lib.rs
not-yet-done-ratatui/: Cargo.toml  README.md
not-yet-done-ratatui/ai/scripts/: focus_grids.py
not-yet-done-ratatui/doc/: grid.md
not-yet-done-ratatui/examples/: new_server.rs  new_server_form.rs  new_user.rs  playlist_builder.rs  two_column.rs  two_column_form.rs
not-yet-done-ratatui/src/: lib.rs
not-yet-done-ratatui/src/utils/: mod.rs  open_editor.rs
not-yet-done-ratatui/src/widgets/: mod.rs
not-yet-done-ratatui/src/widgets/common/: keymap.rs  mod.rs  render.rs  style.rs
not-yet-done-ratatui/src/widgets/form/: field.rs  keymap.rs  mod.rs  state.rs  style.rs
not-yet-done-ratatui/src/widgets/multi_choice/: component.rs  keymap.rs  mod.rs  render.rs  state.rs  style.rs
not-yet-done-ratatui/src/widgets/text_input/: component.rs  keymap.rs  mod.rs  render.rs  state.rs  style.rs
not-yet-done-ratatui/src/widgets/two_column/: mod.rs  style.rs
not-yet-done-tui/: Cargo.toml
not-yet-done-tui/src/: events.rs  filter_builder.rs  main.rs  render.rs
not-yet-done-tui/src/app/: mod.rs
not-yet-done-tui/src/config/: color.rs  config_service.rs  keybindings.rs  layout.rs  mod.rs  theme_config.rs  theme_service.rs  tui_config.rs
not-yet-done-tui/src/tabs/: mod.rs
not-yet-done-tui/src/ui/: form_widgets.rs  mod.rs  placeholder.rs  status_bar.rs  tab_bar.rs  theme.rs  welcome.rs
not-yet-done-tui/src/ui/tasks/: forest.rs  form_pane.rs  fuzzy_pane.rs  highlight.rs  list_view.rs  mod.rs  sort.rs  sub_tab_bar.rs  tree_view.rs  view_helpers.rs  view_pane.rs
ratatui-form-widgets/src/: lib.rs  multiple_choice.rs  text_field.rs  toggle_field.rs
ratatui_form_widgets/: Cargo.toml
ratatui_form_widgets/src/: lib.rs
