[workspace]
resolver = "3"
members = ["not-yet-done-cli", "not-yet-done-core"]

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "schema-sync",
    "entity-registry",
    "macros",
] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
shaku = { version = "0.6.2", features = ["derive"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["clock"] }
regex = "1.12.3"
chrono-english = "0.1.8"
dateparser     = "0.2.1"
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
