[package]
name = "not-yet-done-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
not-yet-done-core = { path = "../not-yet-done-core" }
sea-orm           = { workspace = true }
shaku             = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
tusks             = "2.1"
chrono            = { workspace = true }
chrono-english    = { workspace = true }
dateparser        = { workspace = true }

[dev-dependencies]
assert_cmd        = { workspace = true }
predicates        = { workspace = true }
tempfile          = { workspace = true }
