[package]
name = "not-yet-done-ratatui"
version = "0.1.0"
edition = "2024"

[[example]]
name = "new_server"
path = "examples/new_server.rs"
 
[[example]]
name = "new_user"
path = "examples/new_user.rs"

[[example]]
name = "new_server_form"
path = "examples/new_server_form.rs"

[[example]]
name = "two_column"
path = "examples/two_column.rs"

[[example]]
name = "two_column_form"
path = "examples/two_column_form.rs"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tempfile.workspace = true
unicode-width.workspace = true
