[package]
name = "not-yet-done-ratatui"
version = "0.1.0"
edition = "2024"
autoexamples = false

[[example]]
name = "new_server"
path = "examples/new_server.rs"

[[example]]
name = "playlist_builder"
path = "examples/playlist_builder.rs"

[dependencies]
ratatui = "0.29"
unicode-width = "0.2.0"
tuirealm = { version = "3.3.0", features = ["crossterm"] }
crossterm = "0.29.0"
tempfile = "3.27.0"
